<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">


    <org.devio.hi.ui.title.HiNavigationBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/color_white"
        app:nav_title="@string/title_order_confirm" />

    <TextView
        android:id="@+id/add_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="1dp"
        android:background="@color/color_white"
        android:drawableLeft="@drawable/ic_add_red"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/add_order_address"
        android:textColor="@color/color_333"
        android:textSize="@dimen/font_14"
        android:visibility="gone"
        tools:visibility="visible" />

    <!--    <ViewStub-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"/>
    -->
    <!--    默认收货地址-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="1dp"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:visibility="gone"
        tools:visibility="visible">

        <org.devio.hi.ui.icfont.IconFontTextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/if_location"
            android:textSize="@dimen/sp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center_vertical"
            android:textColor="@color/color_333"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/user_address"
            app:layout_constraintLeft_toRightOf="@+id/location"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="移动端架构师" />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/color_999"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/user_name"
            app:layout_constraintLeft_toRightOf="@+id/user_name"
            app:layout_constraintTop_toTopOf="@id/user_name"
            tools:text="10086" />

        <TextView
            android:id="@+id/user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            tools:text="浙江省杭州市xxxx" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <ImageView
            android:id="@+id/shop_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            tools:background="@color/colorAccent" />


        <TextView
            android:id="@+id/shop_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center_vertical"
            android:textColor="@color/color_666"
            android:textSize="@dimen/font_14"
            tools:text="imoooooooooc官方旗舰店" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">


        <ImageView
            android:id="@+id/goods_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/colorAccent" />

        <TextView
            android:id="@+id/goods_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toRightOf="@+id/goods_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/goods_image"
            tools:text="小朋友你是否有很多问号小朋友你是否有很多问号小朋友你是否有很多问号小朋友你是否有很多问号小朋友你是否有很多问号" />


        <TextView
            android:id="@+id/goods_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@+id/goods_image"
            app:layout_constraintLeft_toRightOf="@+id/goods_image"
            tools:text="1￥/件" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/amount_of_order"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp_12" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <org.devio.hi.ui.amout.AmountView
            android:id="@+id/amount_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/channel_wx_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_white"
        android:drawableLeft="@drawable/ic_wx_pay"
        android:drawableRight="@drawable/selector_payway_checked"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/channel_wx_pay"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_12" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/channel_ali_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="1px"
        android:background="@color/color_white"
        android:checked="true"
        android:drawableLeft="@drawable/ic_ali_pay"
        android:drawableRight="@drawable/selector_payway_checked"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/channel_wx_pay"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp_12" />


    <Space
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/total_pay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_16"
            android:gravity="center_vertical"
            android:text="@string/total_pay"
            android:textColor="@color/color_333"
            android:textSize="@dimen/font_14" />

        <TextView
            android:id="@+id/total_pay_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_16"
            android:gravity="center_vertical"
            android:textColor="@color/color_dd2"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"
            tools:text="100.0$免运费" />

        <TextView
            android:id="@+id/order_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/color_dd2"
            android:gravity="center"
            android:text="@string/pay_now"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
